Test build for server-side Tungsten support